--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.0",
+    "@tanstack/react-query": "^5.28.6",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.5.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
     "react-hook-form": "^7.51.1",
-    "@tanstack/react-query": "^5.28.6",
-    "date-fns": "^3.5.0",
-    "clsx": "^2.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
